--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.0",
     "@supabase/auth-helpers-nextjs": "^0.7.1",
+    "@types/classnames": "^2.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@types/uuid": "^9.0.1",
@@ -19,6 +20,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "moment": "^2.29.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
